WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212739
File URLs with hostnames are misleading
https://bugs.webkit.org/show_bug.cgi?id=212739
Summary
File URLs with hostnames are misleading
youenn fablet
Reported
2020-06-04 05:03:33 PDT
File URLs with hostnames are misleading
Attachments
Patch
(8.27 KB, patch)
2020-06-04 05:26 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(8.32 KB, patch)
2020-06-05 00:34 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Rebasing
(141.04 KB, patch)
2020-06-08 00:34 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.40 KB, patch)
2020-06-08 00:40 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Rebasing
(141.81 KB, patch)
2020-06-08 02:32 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.43 KB, patch)
2020-06-08 02:40 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-06-04 05:03:46 PDT
<
rdar://problem/63754917
>
youenn fablet
Comment 2
2020-06-04 05:26:06 PDT
Created
attachment 401015
[details]
Patch
youenn fablet
Comment 3
2020-06-05 00:34:30 PDT
Created
attachment 401127
[details]
Patch
Alex Christensen
Comment 4
2020-06-05 12:42:47 PDT
Comment on
attachment 401127
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401127&action=review
seems reasonable.
> Tools/TestWebKitAPI/Tests/WebKitCocoa/OpenAndCloseWindow.mm:337 > + TestWebKitAPI::Util::sleep(0.1);
spinRunLoop might be nicer here. It could save almost 1/10 of a second each time this test is run.
youenn fablet
Comment 5
2020-06-08 00:34:57 PDT
Created
attachment 401314
[details]
Rebasing
youenn fablet
Comment 6
2020-06-08 00:40:51 PDT
Created
attachment 401315
[details]
Patch for landing
youenn fablet
Comment 7
2020-06-08 02:32:21 PDT
Created
attachment 401318
[details]
Rebasing
youenn fablet
Comment 8
2020-06-08 02:40:23 PDT
Created
attachment 401319
[details]
Patch for landing
EWS
Comment 9
2020-06-08 04:33:20 PDT
Committed
r262707
: <
https://trac.webkit.org/changeset/262707
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401319
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug